Adição do princípio open/closed